--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -448,6 +448,8 @@
                             <thead>
                                 <tr>
                                     <th scope="col">Text</th>
+                                    <th scope="col">Plane</th>
+                                    <th scopr="col">Slice</th>
                                     <th scope="col">Instance</th>
                                     <th scope="col">Date</th>
                                     <th scope="col">User</th>
