--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -1009,7 +1009,7 @@
 
     function generateAndInsertOrder(institutionName) {
         if (!document.getElementById('newPoNumber').value.length) {
-            alert("Please enter a valid institution name.");
+            alert("Please enter a valid Po Number.");
             return; // Early return to stop the function execution
         }
 
