--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
@@ -224,6 +224,12 @@
             /* 可以根据需求调整高度 */
             overflow-y: auto;
         }
+
+        .table-header-cell {
+            padding: 25px;
+            /* 可以根据需要调整 */
+            text-align: left;
+        }
     </style>
 </head>
 
@@ -244,7 +250,6 @@
                         <div class="col-md-5">
                             <div class="mb-3">
                                 <div id="filterContainer">
-
                                 </div>
                                 <!-- <h5 class="card-title">Dataset List</h5> -->
                                 <div id="datasetList" class="table table-striped table-hover"></div>
