--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -296,10 +296,10 @@
                         <a class="nav-link px-2" data-toggle="tab" href="#datasetCard"><i
                                 class="fas fa-window-restore"></i> Data Browser</a>
                     </li> -->
-                    <li id="tab6" class="nav-item">
+                    <!-- <li id="tab6" class="nav-item">
                         <a class="nav-link px-2 active" data-toggle="tab" href="#dsCard"><i class="fas fa-info"></i>
                             Info</a>
-                    </li>
+                    </li> -->
 
                     <li id="tab1" class="nav-item">
                         <a id="imageTab" class="nav-link px-2" data-toggle="tab" href="#imageCard"><i
@@ -556,29 +556,7 @@
                     </div>
                 </div>
 
-                <div id="dsCard" class="card-body tab-pane active">
-                    <!-- JS automated-->
-                    <dl class="row">
-                        <dt class="col-sm-6">Institution Name: </dt>
-                        <dd id="InstitutionName" class="col-sm-12"></dd>
-                    </dl>
-                    <dl class="row">
-                        <dt class="col-sm-6">PI: </dt>
-                        <dd id="piInfo" class="col-sm-12"></dd>
-                    </dl>
-                    <dl class="row">
-                        <dt class="col-sm-6">Specimen Name: </dt>
-                        <dd id="specimenInfo" class="col-sm-12"></dd>
-                    </dl>
-                    <dl class="row">
-                        <dt class="col-sm-6">Voxel Size: </dt>
-                        <dd id="voxelInfo" class="col-sm-12"></dd>
-                    </dl>
-                    <dl class="row">
-                        <dt class="col-sm-6">Section Thickness: </dt>
-                        <dd id="thicknessInfo" class="col-sm-12"></dd>
-                    </dl>
-                </div>
+
                 <div id="fileCard" class="card-body tab-pane">
                     <div class="row mx-2 p-1">
                         <button id="fileManageBtn" type="button" class="btn btn-primary col-5 m-1"
@@ -608,68 +586,99 @@
                     <div id="UpMainDiv" style="width: 95%;">
                         <div class="card shadow">
                             <div class="card-header">
-                                <div class="d-flex align-items-center">
-                                    <!-- Tab Navigation -->
-                                    <ul class="nav nav-tabs flex-row">
-                                        <li class="nav-item">
-                                            <a id="orthoTab" class="nav-link px-2 disabled" data-toggle="tab"
-                                                href="#orthoCard">
-                                                Orthographic Views
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a id="vrTab" class="nav-link px-2 disabled" data-toggle="tab"
-                                                href="#vrCard">
-                                                Volume Rendering
-                                            </a>
-                                        </li>
-                                    </ul>
-                                    <form class="form d-flex align-items-center ml-auto">
-                                        <div class="form-group d-flex align-items-center mx-2 my-0"
-                                            style="align-items: center;">
-                                            <label for="dsSelect" class="mr-1 align-self-center"
-                                                style="margin-bottom: 0;">Dataset:</label>
-                                            <select id="dsSelect" class="form-control form-control-sm"
-                                                style="width: 120px;">
-                                                <option value="" selected>Choose..</option>
-                                                {% for ds in datasets %}
-                                                <option value="{{ ds }}">{{ ds }}</option>
-                                                {% endfor %}
-                                            </select>
-                                        </div>
+                                <div class="d-flex flex-column">
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <!-- Tab Navigation -->
+                                        <ul class="nav nav-tabs flex-row">
+                                            <li class="nav-item">
+                                                <a id="orthoTab" class="nav-link px-2 disabled" data-toggle="tab"
+                                                    href="#orthoCard">
+                                                    Orthographic Views
+                                                </a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a id="vrTab" class="nav-link px-2 disabled" data-toggle="tab"
+                                                    href="#vrCard">
+                                                    Volume Rendering
+                                                </a>
+                                            </li>
+                                        </ul>
+                                        <!-- Form Selection -->
+                                        <form class="form d-flex align-items-center ml-auto">
+                                            <div class="form-group d-flex align-items-center mx-2 my-0"
+                                                style="align-items: center;">
+                                                <label for="dsSelect" class="mr-1 align-self-center"
+                                                    style="margin-bottom: 0;">Dataset:</label>
+                                                <select id="dsSelect" class="form-control form-control-sm"
+                                                    style="width: 120px;">
+                                                    <option value="" selected>Choose..</option>
+                                                    {% for ds in datasets %}
+                                                    <option value="{{ ds }}">{{ ds }}</option>
+                                                    {% endfor %}
+                                                </select>
+                                            </div>
 
-                                        <div class="form-group d-flex align-items-center mx-2 my-0"
-                                            style="align-items: center;">
-                                            <label for="modSelect" class="mr-1 align-self-center"
-                                                style="margin-bottom: 0;">Modality:</label>
-                                            <select id="modSelect"
-                                                class="form-control form-control-sm align-self-center"
-                                                style="width: 120px; height: calc(1.5em + .75rem + 2px);"
-                                                disabled></select>
-                                        </div>
+                                            <div class="form-group d-flex align-items-center mx-2 my-0"
+                                                style="align-items: center;">
+                                                <label for="modSelect" class="mr-1 align-self-center"
+                                                    style="margin-bottom: 0;">Modality:</label>
+                                                <select id="modSelect"
+                                                    class="form-control form-control-sm align-self-center"
+                                                    style="width: 120px; height: calc(1.5em + .75rem + 2px);"
+                                                    disabled></select>
+                                            </div>
 
-                                        <div class="form-group d-flex align-items-center mx-2 my-0"
-                                            style="align-items: center;">
-                                            <label for="exposureSelect" class="mr-1 align-self-center"
-                                                style="margin-bottom: 0;">Exposure:</label>
-                                            <select id="exposureSelect"
-                                                class="form-control form-control-sm align-self-center"
-                                                style="width: 120px; height: calc(1.5em + .75rem + 2px);"
-                                                disabled></select>
-                                        </div>
+                                            <div class="form-group d-flex align-items-center mx-2 my-0"
+                                                style="align-items: center;">
+                                                <label for="exposureSelect" class="mr-1 align-self-center"
+                                                    style="margin-bottom: 0;">Exposure:</label>
+                                                <select id="exposureSelect"
+                                                    class="form-control form-control-sm align-self-center"
+                                                    style="width: 120px; height: calc(1.5em + .75rem + 2px);"
+                                                    disabled></select>
+                                            </div>
 
-                                        <div class="form-group d-flex align-items-center mx-2 my-0"
-                                            style="align-items: center;">
-                                            <label for="wavelengthSelect" class="mr-1 align-self-center"
-                                                style="margin-bottom: 0;">Wavelength:</label>
-                                            <select id="wavelengthSelect"
-                                                class="form-control form-control-sm align-self-center"
-                                                style="width: 120px; height: calc(1.5em + .75rem + 2px);"
-                                                disabled></select>
+                                            <div class="form-group d-flex align-items-center mx-2 my-0"
+                                                style="align-items: center;">
+                                                <label for="wavelengthSelect" class="mr-1 align-self-center"
+                                                    style="margin-bottom: 0;">Wavelength:</label>
+                                                <select id="wavelengthSelect"
+                                                    class="form-control form-control-sm align-self-center"
+                                                    style="width: 120px; height: calc(1.5em + .75rem + 2px);"
+                                                    disabled></select>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <!-- Information Display -->
+                                    <div class="card mt-3">
+                                        <div class="card-body py-2">
+                                            <div class="d-flex flex-wrap align-items-center">
+                                                <div class="form-group mx-1 my-0 d-flex align-items-center">
+                                                    <dt class="mr-1 small">Institution Name:</dt>
+                                                    <dd id="InstitutionName" class="small mb-0"></dd>
+                                                </div>
+                                                <div class="form-group mx-1 my-0 d-flex align-items-center">
+                                                    <dt class="mr-1 small">PI:</dt>
+                                                    <dd id="piInfo" class="small mb-0"></dd>
+                                                </div>
+                                                <div class="form-group mx-1 my-0 d-flex align-items-center">
+                                                    <dt class="mr-1 small">Specimen Name:</dt>
+                                                    <dd id="specimenInfo" class="small mb-0"></dd>
+                                                </div>
+                                                <div class="form-group mx-1 my-0 d-flex align-items-center">
+                                                    <dt class="mr-1 small">Voxel Size:</dt>
+                                                    <dd id="voxelInfo" class="small mb-0"></dd>
+                                                </div>
+                                                <div class="form-group mx-1 my-0 d-flex align-items-center">
+                                                    <dt class="mr-1 small">Section Thickness:</dt>
+                                                    <dd id="thicknessInfo" class="small mb-0"></dd>
+                                                </div>
+                                            </div>
                                         </div>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
+
 
                             <div id="xy-card-body" class="card-body d-none">
                                 <div id="xyDiv" style="cursor: crosshair;"><label
