--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
@@ -34,6 +34,11 @@
       color: #0F71F2;
       /* Set the link color when the mouse is paused to light gray */
     }
+
+    .navbar-nav .nav-link {
+      font-weight: bold;
+      /* 使导航链接文字加粗 */
+    }
   </style>
 </head>
 
