--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
@@ -39,6 +39,10 @@
       font-weight: bold;
       /* 使导航链接文字加粗 */
     }
+
+    .welcome-message {
+      font-weight: bold;
+    }
   </style>
 </head>
 
@@ -73,7 +77,7 @@
       </ul>
 
       {% if 'email' in session %}
-      Welcome, {{ session['email'] }}
+      <span class="welcome-message">Welcome</span>, {{ session['email'] }}
       <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i></a>
       {% else %}
       <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> Login</a>
