--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -575,14 +575,14 @@
                             <option value="1"> XZ </option>
                             <option value="2"> YZ </option>
                         </select>
-                        <label for="exportSizeSelect">Size</label>
+                        <!-- <label for="exportSizeSelect">Size</label>
                         <select id="exportSizeSelect" class="form-control mx-1">
                             <option value="0" selected> 1000 * 475 pixels</option>
                             <option value="1"> 2000 * 950 pixels</option>
                             <option value="2"> 3000 * 1425 pixels</option>
                             <option value="3"> 4000 * 1900 pixels</option>
-                        </select>
-                        <button id="exportBtn" class="btn btn-info" role="button" disabled>Download
+                        </select> -->
+                        <button id="exportBtn" class="btn btn-info" role="button" disabled>Export
                             Image</button>
                     </div>
                 </div>
